# OTORI-Vision-Testnet

./: .cursorrules  .env.local  .gitignore  Cargo.toml  LICENSE  README.md  new_blocks.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.arch_data/testnet/: secret_key
.arch_data/testnet/ledger/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
.cursor/rules/: otori-rules.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-check.yml  security.yml
.next/: trace
.next/cache/: .rscinfo
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/client-development-fallback/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/static/chunks/fallback/: amp.js  node_modules_next_dist_pages__app_js.js  node_modules_next_dist_pages__error_js.js  react-refresh.js  webpack.js
components/: WalletConnector.tsx
docs/: BACKLOG.md  DEV_JOURNAL.md
ovt-fund/: .env.example  .env.local  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
ovt-fund/.next/: trace
ovt-fund/.next/cache/: .rscinfo
ovt-fund/.next/server/: _error.js
ovt-fund/.next/server/pages/: _app.js  _error.js  index.js
ovt-fund/.next/server/vendor-chunks/: @headlessui.js  @heroicons.js  @swc.js  next.js  recharts.js
ovt-fund/.next/static/chunks/: _error.js  node_modules_next_dist_pages__app_js.js  node_modules_next_dist_pages__error_js.js  react-refresh.js  webpack.js
ovt-fund/components/: ChartToggle.tsx  NAVVisualization.tsx  Portfolio.tsx  PriceChart.tsx  ThemeProvider.tsx  TokenExplorerModal.tsx  WalletConnector.tsx
ovt-fund/components/__tests__/: AdminDashboard.test.tsx  ChartToggle.test.tsx  MultiSigApproval.test.tsx  NAVVisualization.test.tsx  PositionManagement.test.tsx  PriceChart.test.tsx  TokenExplorerModal.test.tsx  TokenMinting.test.tsx  TransactionHistory.test.tsx
ovt-fund/components/admin/: AdminDashboard.tsx  MultiSigApproval.tsx  PositionManagement.tsx  TokenMinting.tsx  TransactionHistory.tsx
ovt-fund/pages/: _app.tsx  index.tsx
ovt-fund/scripts/: mint-initial-ovt.ts
ovt-fund/src/hooks/: useBitcoinPrice.ts  useOVTClient.ts
ovt-fund/src/hooks/__tests__/: useOVTClient.test.tsx
ovt-fund/src/lib/: archClient.ts  bitcoinPrice.ts
ovt-fund/src/mock-data/: portfolio-positions.json  token-data.json
ovt-fund/src/utils/: adminUtils.ts
ovt-fund/styles/: globals.css
ovt-fund/test-utils/: setup.ts  test-utils.tsx
ovt-fund/types/: test-types.d.ts
ovt-program/: Cargo.toml
ovt-program/src/: client.rs  error.rs  lib.rs  mock_sdk.rs  runes_client.rs  system.rs  utxo.rs
ovt-program/tests/: local.rs  test_multisig.rs
pages/: index.tsx
program/: Cargo.toml
program/src/: client.rs  error.rs  lib.rs  mock_sdk.rs  runes_client.rs  system.rs  utxo.rs
program/tests/: local.rs  test_multisig.rs
prompt_docs/: PRD_MVP.md  PRD_MVP_v2o.md  arch_docs.md  customer_journey_2.0.md
scripts/: populate-initial-positions.ts  start-local-env.sh
src/hooks/: useOVTToken.ts
styles/: globals.css
tests/: local.rs
(+124 files in other folders)
