# [workspace]
# members = [
#     "program",
# ]

# resolver = "2"

[workspace.dependencies]
borsh = { version = "1.5", features = ["derive"] }
thiserror = "2.0"
bitcoin = { version = "0.32", features = ["std"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0" 