[package]
name = "ovt-program"
version = "0.1.0"
edition = "2021"
description = "OTORI Vision Token (OVT) Program for Arch Network"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0" 