[package]
name = "ovt-program"
version = "0.1.0"
edition = "2021"
description = "OTORI Vision Token (OVT) Program using Runes Protocol"

[lib]
name = "ovt_program"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
thiserror = "1.0"
bitcoin = { version = "0.32", features = ["rand"] }
hex = "0.4"
rand = { version = "0.8", features = ["std", "std_rng", "getrandom"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[workspace]
members = ["."]

[workspace.dependencies]
tracing = "0.1" 